# mcp-gateway

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  TODO.md  config.example.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  schema.sql
.github/workflows/: docker-publish.yml  pr-checks.yml  release.yml
docs/: client-configuration.md  configuration.md  deployment-guide.md  development.md  mcp-gateway-runtime-flow.mmd  mcp-gateway-security-multi-user-plan.md  operations.md  rbac-onboarding.md
docs/postman/: mcp-gateway.postman_collection.json
src/mcp_gateway/: auth.py  authorization.py  cache.py  cli.py  config.py  errors.py  gateway.py  jsonrpc.py  logging.py  postgres.py  postgres_audit.py  postgres_identities.py  postgres_rbac.py  postgres_reporting.py  postgres_serialization.py  protocol.py  request_context.py  router.py  runtime_state.py  server_http.py  telemetry.py  upstreams.py
src/mcp_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: gateway_test_support.py  test_auth.py  test_authorization.py  test_cli.py  test_config.py  test_gateway.py  test_integration_app.py  test_logging.py  test_postgres.py  test_telemetry.py  test_upstreams.py
tests/fixtures/: fake_stdio_upstream.py
