[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gateway"
version = "1.0.0"
description = "MCP gateway/proxy with logging, denylist, and caching"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
  "aiohttp>=3.9",
  "pyyaml>=6.0",
  "psycopg[binary,pool]>=3.1",
  "orjson>=3.10",
  "prometheus-client>=0.20",
  "casbin>=1.36",
  "python-dotenv>=1.0",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.15.6",
]

[project.scripts]
gateway = "mcp_gateway.cli:main"
mcp-gateway = "mcp_gateway.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
